# aoc2022

./: .gitignore  AoC22.cabal  README.md
src/AoC/Day01/: Solution.hs
src/AoC/Day02/: Solution.hs
src/AoC/Day03/: Solution.hs
src/AoC/Day04/: Solution.hs
src/AoC/Day05/: Solution.hs
src/AoC/Day06/: Solution.hs
src/AoC/Day07/: Solution.hs
src/AoC/Day08/: Solution.hs
