cabal-version:          3.4
name:                   AoC22
version:                0.1.0.0
license:                MIT
author:                 Mirko Westermeier

library
  exposed-modules:      AoC.Day01.Solution
                      , AoC.Day02.Solution
                      , AoC.Day03.Solution
  build-depends:        base >=4
                      , extra
                      , split
  hs-source-dirs:       src
  default-language:     Haskell2010
